[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/enemies/creatures/creatures edit_0_transparent.png" type="Texture" id=1]
[ext_resource path="res://scenes/actors/Enemy.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 448, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 4 ), SubResource( 4 ) ],
"loop": false,
"name": "dead",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 9.10264

[node name="Enemy" type="Area2D"]
light_mask = 2
scale = Vector2( 5, 5 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
playing = true

[node name="BoundaryDetection" type="CollisionShape2D" parent="."]
position = Vector2( -2.46611, -5.07968 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="HitBoxes" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="HitBoxes"]
position = Vector2( 0.317481, 0.317481 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxes/Area2D"]
position = Vector2( -2.46611, -5.07968 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="ProjectileSpawner" type="Node2D" parent="."]
position = Vector2( -8.88944, -5.07969 )

[node name="CooldownTimer" type="Timer" parent="ProjectileSpawner"]
wait_time = 5.0
autostart = true

[node name="HitCooldownTimer" type="Timer" parent="."]

[node name="BurstCooldownTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.15
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="HitBoxes/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ProjectileSpawner/CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="HitCooldownTimer" to="." method="_on_HitCooldownTimer_timeout"]
[connection signal="timeout" from="BurstCooldownTimer" to="." method="_on_BurstCooldownTimer_timeout"]
